配置开发环境　nodemon　ejs jade co-views

--- a/docs/项目开发环境说明.md
+++ b/docs/项目开发环境说明.md
@@ -5,3 +5,5 @@
 ### 2. koa
 ### 3. git
 ### 4. mysql
+### 5.pm2 start app.js -> config file: process.json
+### 6.nodemon app.js -> config file: nodemon.json
